--- a/KriddieFolder/Geomorphology_Script/GAVITRIB1_Geomorphology_2024-08-30.Rmd
+++ b/KriddieFolder/Geomorphology_Script/GAVITRIB1_Geomorphology_2024-08-30.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Geomorphology_GAVI-DOWN"
+title: "Geomorphology_ANTE"
 author: "KWhitmore"
-date: "12/09/2021"
+date: "09/03/2024"
 output: html_document
 ---
 
@@ -19,6 +19,7 @@ library(dplyr)
 library(sp)
 library(geosphere)
 library(ggmap)
+library(data.table)
 
 
 #funtion
@@ -55,16 +56,13 @@ arrange.vars <- function(data, vars){
     return(data)
 }
 ```
-## BUild the geomorphology data frame for Ante mainstem
 
-2021-07-26 9:50
+## BUild the geomorphology data frame for GAVI tributaries
+this was collected near the end of the field season
+
 ```{r build df 2021-12-18}
-
-add_coordinates <- data.frame(lat=c(-0.3281818,-0.3281891,-0.3282081,-0.3282233),
-                              lon=c(-78.2004517,-78.2004572,-78.2004747,-78.2004911),
-                              ele=c(NA,NA,NA,NA),time=c(NA,NA,NA,NA))
-
 Geomorph <- read.csv(here::here("Geomorphology/Gavilan/GAVI_Dec2021.csv"), skip = 70)
+
 Geomorph <- Geomorph[,3:6]
 
 #convert time in UTC to local time
@@ -76,119 +74,60 @@ Geomorph$time <-Geomorph$time - 5*60*60
 #round to nearest half second
 Geomorph$time <- round_date(Geomorph$time, unit = "30 second")
 
-# 2021-12-18 START: 10:33:00  
-
-#downstream to outlet 11:39
 Geomorph_1 <- subset(Geomorph,
-      time > as.POSIXct('2021-12-18 10:33:00', tz="UTC") & time < as.POSIXct('2021-12-18 11:39:00', tz="UTC"))
-#start at GAVI inlet
-Geomorph_2 <- subset(Geomorph,
-      time > as.POSIXct('2021-12-18 11:53:00', tz="UTC") & time < as.POSIXct('2021-12-18 13:15:00', tz="UTC"))
-
-Geomorph <- rbind(Geomorph_1,Geomorph_2)
-
-#just downstream of gavi
-Geomorph <- Geomorph %>% filter(lat <= -.328)
-#add coordinates from arcpro
-Geomorph <- rbind(add_coordinates,Geomorph)
+      time > as.POSIXct('2021-12-18 13:19:30', tz="UTC"))
 
 ```
 
-It's not a bad thing, per se, but I really made things complicated when I started taking measurmenets of streams in addition to the mainstem of GAVI. I blame Diego, frankly. But I also blame myself from listening to Diego. Have confidence in you're game plan, Kriddie, for goodness Sake.
 
-So let's try to just select the mainstem samples, for starters.
+Let's do the synoptic one trib at a time
+
 
 ```{r add synop to df}
 #synop <- read.csv(here::here("Synoptic/GAVI.csv"))
-#synop <- read.csv(here::here("Synoptic/GAVI_2022-01-27.csv"))
 #synop <- read.csv(here::here("Synoptic/GAVI_2022-03-24.csv"))
 #synop <- read.csv(here::here("Synoptic/GAVI_2022-04-19.csv"))
 synop <- read.csv(here::here("Synoptic/GAVI_2022-06-04.csv"))
 
 synop$X <- NULL
 
-colnames(synop) <- c("lon","lat","Date","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm","DateTime","SampleID", "DOC","TDN","ID","Notes")
-synop <- synop[,c("lat","lon","Date","DateTime","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm","DOC","TDN")]
+colnames(synop) <- c("lat","lon","Date","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm","SampleID","DateTime","DOC","TDN","ID","Notes")
+synop <- synop[,c("lat","lon","Date","EOS_no","Flux_ave", "Tract","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm","DOC","TDN")]
 
-Synopjune18 <- synop %>% filter(Date == "2021-06-18")
-Synopjune22 <- synop %>% filter(Date == "2021-06-22" & EOS_no == "EOS1" & Tract == 1)
-Synopjune29 <- synop %>% filter(Date == "2021-06-29" & EOS_no == "EOS2" & Tract == 7)
-Synopjune30 <- synop %>% filter(Date == "2021-06-30" & EOS_no == "EOS2")
-
-synop_mainstem <- rbind(Synopjune18,Synopjune22#,Synopjune29,Synopjune30
-                        )
-rm(Synopjune18,Synopjune22,Synopjune29,Synopjune30)
-```
-
-
-
-##Plot the geomorphology data in 3-d
-
-```{r 3d plot no synop, echo=FALSE}
-
-
-fig <- plot_ly(Geomorph, x = ~lat, y = ~lon, z = ~ele, size = 1
-)
-fig <- fig %>% add_markers()
-#fig <- fig %>% add_trace(x = ~lat, y = ~lon, z = ~ele, #color = ~EOS_no#, colors = c('Blue','Yellow'),
-#                         mode = 'markers')
-fig <- fig %>% layout(scene = list(xaxis = list(title = 'lat'), yaxis = list(title = 'lon'), zaxis = list(title = 'elevation')))
-
-fig
-
+#long trib that tessa measured
+Synop_1 <- synop %>% filter(EOS_no=="EOS1") %>%
+  filter(Date == "2021-06-23" | Date == "2021-06-29") %>%
+  filter(Tract == 1 | Tract == 3)%>%
+  filter(lat	> -0.3305667)
+#stream that goes up to the refuge
+Synop_2 <- synop %>% filter(Date == "2021-06-23" & Tract == 1)
 
 ```
 
-## Now Plot data in 3D including synoptic points
-
-
-```{r 3d plot and synop, echo=FALSE}
-
-df <- full_join(synop_mainstem,Geomorph, by=c("lat","lon")) 
-
-
-fig <- plot_ly(df, x = ~lat, y = ~lon, z = ~ele, size = 1,
-               marker = list(color = ~CO2_ppm_ave, colorscale = c('#FFE1A1', '#683531'), showscale = TRUE))
-
-#FFE1A1 #683531
-
-fig <- fig %>% add_markers()
-#fig <- fig %>% add_trace(x = ~lat, y = ~lon, z = ~ele, #color = ~EOS_no#, colors = c('Blue','Yellow'),
-#                         mode = 'markers')
-fig <- fig %>% layout(scene = list(xaxis = list(title = 'lat'),yaxis = list(title = 'lon'),zaxis = list(title = 'elevation')))
-
-fig
-
-TrackMap <- qmplot(lon, lat, data = df, zoom = 13,
-                   maptype = "toner-background", color=ele)
-
-TrackMap
-```
-#are you seeing the problem? 
-This is worse then both Colmillo and Antenas. below the main wetland its not so bad, but above is kinda a mess. I think I should re-do this when I am back at the site, but for now, let us proceed.
 
 #working with 3-D is hard.
 In this code chunk, we start by smooting a line to the lat lon data, which appears to be more accurate than the elevation
 
 We will do this in parts though, be cause the relationship between lat lon can not be described as a function
 
+
 ```{r first spline, echo=FALSE}
 
-df <- full_join(synop_mainstem,Geomorph, by=c("lat","lon")) 
+#Cut up lat long into peices, and then fit spline
 
-
+Geomorph_sub <- Geomorph_1 
 model <- lm(lon~bs(lat,
-                   degree = 10),
-            data=Geomorph)
+                   degree = 9),
+            data=Geomorph_sub)
 
-latlims <- range(Geomorph$lat)
+latlims <- range(Geomorph_sub$lat)
 lat.grid <- seq(from=latlims[1],to=latlims[2], by=.000001)
 pred <-predict(model,newdata=list(lat=lat.grid),se=T)
 
-plot(Geomorph$lat,Geomorph$lon,main="regressionSplinePLot")
+plot(Geomorph_sub$lat,Geomorph_sub$lon,main="regressionSplinePLot")
 lines(lat.grid,pred$fit,col='red',lwd=3)
 
-fig<-plot_ly(data = Geomorph, x = ~lat, y = ~lon)
+fig<-plot_ly(data = Geomorph_sub, x = ~lat, y = ~lon)
 
 #this looks pretty good! So we will save the data in a data frame
 
@@ -200,26 +139,40 @@ df1$num <- '1'
 ```
 
 
+
+
 ```{r bind dataframes, echo=FALSE}
 
 #now we need to make a dataframe that discribes this relationship between lat lon
 df_prediction <- df1
 
-
 plot(df_prediction$lon~df_prediction$lat,col=df_prediction$num)
 
+plot(Geomorph$lat,Geomorph$lon)
 
 ```
 
-now we have a smooth data frame of lat/lon data, we calculate the distance between each point
+ok, lets bind in that last dataframe
+
+```{r bind dataframes, echo=FALSE}
+
+#now we need to make a dataframe that discribes this relationship between lat lon
+df_prediction <- df1
+
+plot(df_prediction$lon~df_prediction$lat,col=df_prediction$num)
+
+plot(Geomorph_sub$lat,Geomorph_sub$lon)
+
+```
 
 ```{r calc dist}
 
-###create a loop and calculate distance along the river from the predict_df. Then we can bind in the GEOMORPH!
+###create a loop and calculate distance along the river from the predict_df. THen we can bind in the GEOMORPH!
 df_prediction <- df1 %>% drop_na(lat)
+
 df_prediction$num <- NULL
-#df_prediction <- df_prediction[,c("lon","lat")]
-colnames(df_prediction) <- c("lat_fit","lon_fit")
+df_prediction <- df_prediction[,c("lon","lat")]
+colnames(df_prediction) <- c("lon_fit","lat_fit")
 df_prediction$lon_dist <- NA
 df_prediction$lat_dist <- NA
 i <- 2
@@ -227,7 +180,6 @@ for(i in 1:nrow(df_prediction)) {
   if (i == 1) {
 
       df_prediction$dist <- 0
-      
     } else {
       df_prediction[i,"lon_dist"] <- df_prediction[i-1,"lon_fit"]
       df_prediction[i,"lat_dist"] <- df_prediction[i-1,"lat_fit"]
@@ -237,54 +189,12 @@ for(i in 1:nrow(df_prediction)) {
       }
 }
 ```
-
 snap the points in our origional dama frame to bring in the elevation data
 
 
 ```{r snap points to lat lon}
 
-x <- SpatialPoints(Geomorph[,c(1:2)])
-y <- SpatialPoints(df_prediction[,c(1:2)]) 
-plot(y, col = "red")
-points(y, col = "green")
-snap = apply(spDists(x, y), 1, which.min)
-points(y[snap,], pch = 3)
-
-
-snap_df <- y[snap,]
-coords_df <- snap_df@coords
-pred <- as.data.frame(coords_df)
-Geomorph$lon_fit <- pred$lon
-Geomorph$lat_fit <- pred$lat
-
-
-df_prediction <- full_join(df_prediction,Geomorph,by=c("lon_fit","lat_fit"))
-
-```
-first I need to make sure that what I have done really worked
-
-```{r testing snap to line, echo=FALSE}
-
-
-fig <- plot_ly(Geomorph, x = ~lat, y = ~lon, z = ~ele, size = 1)
-fig <- fig %>% add_markers()
-fig <- fig %>% add_trace(x = ~lat_fit, y = ~lon_fit, z = ~ele, colors = c('Yellow'),
-                         mode = 'markers')
-fig <- fig %>% layout(scene = list(xaxis = list(title = 'lat'),
-                                   yaxis = list(title = 'lon'),
-                                   zaxis = list(title = 'elevation')))
-
-fig
-
-
-```
-
-ok sweet that looks really good
-
-We also need to snap the synoptic df (for later)
-```{r snap synop pts}
-
-x <- SpatialPoints(synop_mainstem[,c(1:2)])
+x <- SpatialPoints(Geomorph_sub[,c(1:2)])
 y <- SpatialPoints(df_prediction[,c(1:2)]) 
 plot(x, col = "red")
 points(y, col = "green")
@@ -295,18 +205,45 @@ points(y[snap,], pch = 3)
 snap_df <- y[snap,]
 coords_df <- snap_df@coords
 pred <- as.data.frame(coords_df)
-synop_mainstem$lon_fit <- pred$lon
-synop_mainstem$lat_fit <- pred$lat
-
-synop_mainstem <- synop_mainstem[,c("lon_fit","lat_fit","Date","EOS_no","Flux_ave","Point","VaisalaType","CO2_ppm_ave","WaterTemp_c","BaroPress_kpa","AirTemp_c","Total_hPa","adjusted_ppm","DOC","TDN")]
+Geomorph_sub$lon_fit <- pred$lon
+Geomorph_sub$lat_fit <- pred$lat
 
 
-df_prediction <- full_join(df_prediction,synop_mainstem,by=c("lon_fit","lat_fit"))
-check <- df_prediction%>%drop_na(Date)
-
-
+df_prediction <- full_join(df_prediction,Geomorph_sub,by=c("lon_fit","lat_fit"))
 ```
 
+ok sweet that looks really good
+
+We also need to snap the synoptic df (for later)
+```{r snap synop pts}
+
+#read in synop data
+
+synop <- read.csv(here::here("Synoptic/ANTE_2022-06-04.csv"))
+
+synop$X <- NULL
+synop$ID <- NULL
+
+
+x <- SpatialPoints(synop[,c(1:2)])
+y <- SpatialPoints(df_prediction[,c(1:2)]) 
+plot(x, col = "red")
+points(y, col = "green")
+snap = apply(spDists(x, y), 1, which.min)
+points(y[snap,], pch = 3)
+
+
+snap_df <- y[snap,]
+coords_df <- snap_df@coords
+pred <- as.data.frame(coords_df)
+synop$lon_fit <- pred$lon
+synop$lat_fit <- pred$lat
+synop <- synop[,c("Date","EOS_no","Flux_ave","Tract","Point","CO2_ppm_ave","adjusted_ppm", "DOC","TDN","lon_fit","lat_fit","AirTemp_c","VaisalaType","Total_hPa","GAVI_waterTempAve")]
+
+
+df_prediction <- full_join(df_prediction,synop,by=c("lon_fit","lat_fit"))
+
+```
 
 
 ##calculate distance between each coordinate.
@@ -320,26 +257,18 @@ now we have created a distance column that we can plot the elevation data agains
 
 ```{r plot dist v ele, echo = FALSE}
 
-
 fig <- plot_ly(df_prediction, x = ~dist, y = ~ele, size = 1)
 fig
 ```
 
-
-I think it would be better if we did two different prediction above and below gavi
+kriddie, you are doing so good!
+Okay, now lets fit another spline to this puppy
 
 
 ##loess spline
-i think loess might be a little better for this? IT IS NOT
-But maybe just because data is not great. please revisit
+ loess is good for this
 
-ok i did revisit, and I think this is better now
-
-but we do need to split up downstream and upstream data
-
-I've decided to split up my script so that I treat upstream and downstream separately
-
-```{r diff 1 way}
+```{r diff way}
 
 distlims <- range(df_prediction$dist)
 fit <- loess(ele ~ dist, degree=2, span = 0.20, data=df_prediction)
@@ -358,35 +287,25 @@ fig
 
 check <- df_prediction%>%drop_na(Date)
 
-
 ```
+
 
 There really no point in adding slope this way. so let's skip
 
 
-#reverse order
-unfortunately gavi is going from downstream to up, and we want upstream to down. so reverse this order
-you can't just reverse order the distance column because they are not collected at even intervals.
-
-#loops below switch order of distance
 
 ```{r reverse, echo=FALSE}
 
-
 df_prediction <- df_prediction[order(df_prediction$dist),]
-df_prediction$dist_diff <- NA
-#df_prediction$dist_diff[1] <- max(df_prediction$dist)
-
-for(i in 1:nrow(df_prediction)) {       # for-loop over rows
-  if (i == 1) {
-    df_prediction$dist_diff[i] <- max(df_prediction$dist)
-  } else {
-    df_prediction$dist_diff[i] <-   max(df_prediction$dist) - df_prediction[i,"dist"]
-  }
-}
 
 
-#loosing a synop point in the next chunk
+ggplot(data=df_prediction%>%drop_na(lat_wypt), aes(dist, ele, color=log10(CO2_ppm_ave)),size=5) +
+  geom_point(size=5)
+
+ggplot(data=df_prediction%>%drop_na(lat_wypt), aes(lon_fit, lat_fit, color=log10(CO2_ppm_ave)),size=5) +
+  geom_point(size=5)
+
+
 ```
 
 #read out
@@ -394,22 +313,15 @@ I'm really hoping this finaly product looks good
 
 
 ```{r write, echo=FALSE}
-df_prediction <- df_prediction%>%select(lat_fit,lon_fit,ele_fit,dist_diff,Date,Point,Flux_ave,CO2_ppm_ave,adjusted_ppm,DOC,TDN,WaterTemp_c,BaroPress_kpa,AirTemp_c,Total_hPa,VaisalaType,EOS_no)%>%rename(dist=dist_diff)
+df_prediction <- df_prediction%>%select(lat_fit,lon_fit,ele_fit,dist,Date,Point,Flux_ave,CO2_ppm_ave,adjusted_ppm,DOC,TDN,AirTemp_c,Total_hPa,VaisalaType,EOS_no)#%>%rename(dist=dist_diff)
 df_prediction <- unique(df_prediction)
 
 ##check should have 23 synop points 
-check <- df_prediction%>%drop_na(Flux_ave)
+check <- df_prediction%>%drop_na(Point)
 
-#write.csv(df_prediction, here::here("ProcessedData/GAVI_synoptic_2024-09-03.csv"))
-#write.csv(check, here::here("ProcessedData/GAVI_synopticpoints_arcpro_2024-09-03.csv"))
+#write.csv(df_prediction, here::here("ProcessedData/ANTE_synoptic_2024-09-04.csv"))
+#write.csv(check, here::here("ProcessedData/ANTE_synopticpoints_arcpro_2024-09-04.csv"))
 
-
-
-ggplot(data=df_prediction%>%drop_na(Date), aes(dist, ele_fit, color=log10(CO2_ppm_ave)),size=5) +
-  geom_point(size=5)
-
-ggplot(data=df_prediction%>%drop_na(Date), aes(lon_fit, lat_fit, color=log10(CO2_ppm_ave)),size=5) +
-  geom_point(size=5)
 ```
 
 ##now we add in width and depth data
@@ -419,10 +331,10 @@ and also df_prediction for trouble shooting purposes
 
 ```{r x and w and d, echo=FALSE}
 
-df_prediction <- read.csv(here::here("ProcessedData/GAVI_synoptic_2024-09-03.csv"))
+df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2024-09-04.csv"))
 df_prediction$X <- NULL
 
-XWD <- read.csv(here::here("Geomorphology/Gavilan/GAVI-DOWNmainstem_Geomorph_2024-08-30.csv"))
+XWD <- read.csv(here::here("Geomorphology/Atenas/Antenas_Geomorph_2024-09-04.csv"))
 XWD <- XWD%>%select(lon,lat,x_new,d,w,ele,notes)%>%rename(x=x_new)
 
 XWD_save <- XWD[order(XWD$x),]
@@ -458,10 +370,10 @@ df_prediction_1 <- full_join(df_prediction_arrange,XWD_1,by=c("lon_fit","lat_fit
 df_prediction_1 <- df_prediction_1[,c("lon_fit","lat_fit","dist","x","d","w","notes")]
 df_prediction_1 <- unique(df_prediction_1)
 
-# 2 waypoints snapped to corrdinates that are the same distance. 
-#i think that we should delete one of these way points I'll choose the one that is under a culvert, becasue it would make sense that the gps is off when under a culvert
+# there is a point with no associated x, and it causes probelms later
 
-df_prediction_1 <- df_prediction_1%>%filter(notes!="culvert under rd")
+df_prediction_1 <- df_prediction_1%>%filter(notes!="starting at large stream upsteam of last measurement (I think?)")
+
 saveit <- df_prediction_1
 ```
 
@@ -505,13 +417,13 @@ for(i in 1:nrow(df_prediction_1)) {       # for-loop over rows
     dist1 <- pred_df$dist[index]
     x1 <- pred_df$x[index]
     #now find the second closest number - well no. I don't want the second closest. I want the number on the other side. so I don't want to just remove the first x value, I want to remove that value and everythign above or everythign below that value -- depending on weather it is higher or lower
-    if (x1 < df_prediction_1$x[index]) {
-    pred_df_closestremoved <- pred_df%>%filter(x > x1)
+    if (x1 < df_prediction_1$x[i]) {
+    pred_df_closestremoved <- pred_df%>%filter(x > df_prediction_1$x[i])
     index <- match.closest(df_prediction_1$x[i], pred_df_closestremoved$x,tolerance='Inf')
     dist2 <- pred_df_closestremoved$dist[index]
     x2 <- pred_df_closestremoved$x[index]
     } else {
-    pred_df_closestremoved <- pred_df%>%filter(x < x1)
+    pred_df_closestremoved <- pred_df%>%filter(x < df_prediction_1$x[i])
     index <- match.closest(df_prediction_1$x[i], pred_df_closestremoved$x,tolerance='Inf')
     dist2 <- pred_df_closestremoved$dist[index]
     x2 <- pred_df_closestremoved$x[index]
@@ -528,12 +440,12 @@ for(i in 1:nrow(df_prediction_1)) {       # for-loop over rows
 }
 ```
 
-Now we have a data frame with x predicted and associated with distance. Now to match up the distance with nearest lat/lon
+Now we have a data frame with x predicted and associated with distance. Now we associate the closest actual x measurments, depth and width with the predicted x  
 
 
 ```{r width loop, echo=FALSE}
 
-latlon_df <- df_prediction%>%select(lat_fit,lon_fit,ele_fit,dist,Flux_ave,adjusted_ppm,DOC,TDN)%>%rename(x_pred=dist)
+latlon_df <- df_prediction%>%select(lat_fit,lon_fit,ele_fit,dist,Flux_ave,adjusted_ppm)%>%rename(x_pred=dist)
 XWD_df <- df_prediction_1
 
 setDT(latlon_df)
@@ -547,13 +459,15 @@ setDT(XWD_df)
 
 df_prediction_4 <- latlon_df[XWD_df, roll = "nearest", on = "x_pred"]
 
-df_prediction_5 <- df_prediction_4%>%select(lat_fit,lon_fit,ele_fit,x_pred,x,d,w,Flux_ave,adjusted_ppm,DOC,TDN,notes)
+df_prediction_5 <- df_prediction_4%>%select(lat_fit,lon_fit,ele_fit,x_pred,x,d,w,Flux_ave,adjusted_ppm,notes)
 
-#write.csv(df_prediction_5, here::here("ProcessedData/GaviDOWN_XWD.csv"))
+#write.csv(df_prediction_5, here::here("ProcessedData/ANTE_XWD.csv"))
 
 ```
 
 #trapazoid method 
+
+
 ```{r trap method, echo=FALSE}
 # now we calculate surface area of each width measurment using trapazoid method
 
