--- a/KriddieFolder/Geomorphology_Script/GAVI-Down_Geomorphology_2024-08-30.Rmd
+++ b/KriddieFolder/Geomorphology_Script/GAVI-Down_Geomorphology_2024-08-30.Rmd
@@ -543,7 +543,7 @@ df_prediction_4 <- latlon_df[XWD_df, roll = "nearest", on = "x_pred"]
 
 df_prediction_5 <- df_prediction_4%>%select(lat_fit,lon_fit,ele_fit,x_pred,x,d,w,Flux_ave,adjusted_ppm,DOC,TDN,notes)
 
-#write.csv(df_prediction_5, here::here("ProcessedData/GaviDOWN_XWD.csv"))
+write.csv(df_prediction_5, here::here("ProcessedData/GaviDOWN_XWD_2.csv"))
 
 ```
 
